# QT_NMEA_Parser

./: CMakeLists.txt  LICENSE
include/: dpt_sentence.hpp  gga_sentence.hpp  gll_sentence.hpp  hdt_sentence.hpp  hrp_sentence.hpp  mwv_sentence.hpp  nmea.hpp  nmeaparser.hpp  sentencebase.hpp  structs_enums.hpp  vbw_sentence.hpp  vhw_sentence.hpp  vtg_sentence.hpp  zda_sentence.hpp
test/: asd.cpp  main.cpp
